# gender_detection

./: README.md
cmake/: CMakeLists.txt
gui/: LoadDataWidget.ui  MainWindow.ui  TrainWidget.ui
include/: Brain.h  LoadDataWidget.h  MainWindow.h  TrainWidget.h
src/: Brain.cpp  LoadDataWidget.cpp  MainWindow.cpp  TrainWidget.cpp  main.cpp
